crates/ferrum-interfaces/tests/ui/vnext/fail/active_sequence_blocks_runtime_move.rs
use ferrum_interfaces::vnext::*;

fn raw_runtime_is_private<R: DeviceRuntime>(stream: &BoundExecutionStream<R>) {
    let _runtime = &stream.runtime;
}

fn main() {}
